current SVN:

* Create #include dependencies for musl.
* Update to LLVM r220554.
* Build compiler-rt with soft floating point for ARM and Mips.
* Fixed and cleaned up the release process.

version 0.1.2:

* Include the correct binaries for targets. Version 0.1.1 was packaged
  incorrectly.
* Include all LLVM binaries with binary distribution.
* Update to LLVM r220032.
* Fixed missing clang headers for i386.

version 0.1.1:

* Update to musl 1.1.5

version 0.1.0:

* Too many changes to mention. Baseline real release.

version 0.0.2:

* Updated to LLVM/clang/compiler-rt/libcxx/libcxxab r191503
* Updated to binutils 2.23.1
* Updated to GDB 7.6
* Updated to QEMU 1.6.0
* Updated to musl 0.9.14

version 0.0.1:

* Added the workspace directory for examples of multi-target builds.

version 0.0.0:

* Initial public pre-release.