@@ -12,4 +12,4 @@ libecc/share/doc/index.html
 libecc/Makefile
 libecc/config.musl
 libecc/src/
-baremetal/
+examples/
