@@ -1,0 +1,3 @@
+This is a simple "hello world" example. This example can be built for
+several Linux and standalone targets. Type "make help" to see the
+available target configurations.
